# fapi

./: README  docker-compose.yaml  items_views.py  main.py  pyproject.toml  requirements.txt
api_v1/products/: crud.py  views.py
auth/: jwt_auth.py  utils.py
core/: config.py
core/models/: __init__.py  user.py
products/: dependencies.py  views.py
users/: crud.py  schemas.py  views.py
